packages/player-rgb/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background: url(./image.png) no-repeat center center fixed;
  background-size: cover;
  height: 100vh;
  width: 100vw;
  overflow: hidden;

  padding: 10px;
  position: relative;

  display: flex;
  gap: 5px;
}

body::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: #19191990;
  backdrop-filter: blur(50px);
}

.sound-bar-container {
  position: relative;
  height: 100%;
  width: var(--w);
  position: relative;
  pointer-events: none;
}

.sound-bar-box {
  position: absolute;
  bottom: 0;
  left: 0;
  height: 300px;
  width: 100%;
  overflow: hidden;
  /* border: 1px solid #fff; */
}

.sound-bar {
  position: absolute;
  bottom: 0;
  height: 100%;
  width: 100%;
  background:
    linear-gradient(to right, var(--bg-start), var(--bg-end)),
    linear-gradient(to bottom, #ffffff, transparent);
  transform: translateY(298px);
}

.container {
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
  gap: 1px;
}
.mask {
  position: absolute;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: #191919;
  transition: opacity 1s linear;
  z-index: 1;
}

.ring {
  position: absolute;
  margin: auto;
  width: 300px;
  height: 300px;
  border-radius: 50%;
  background-image: url(./image.png);
  transform: translateY(-30%);
}

.ring-process {
  position: absolute;
  margin: auto;
  width: 304px;
  height: 304px;
  border-radius: 50%;
  transform: translateY(-30%);
  background: conic-gradient(
    hsl(0 100% 50%),
    hsl(30 100% 50%),
    hsl(60 100% 50%),
    hsl(90 100% 50%),
    hsl(120 100% 50%),
    hsl(150 100% 50%),
    hsl(180 100% 50%),
    hsl(210 100% 50%),
    hsl(240 100% 50%),
    hsl(270 100% 50%),
    hsl(300 100% 50%),
    hsl(330 100% 50%),
    hsl(360 100% 50%) var(--r),
    transparent var(--r)
  );
  z-index: -1;
}

.duration {
  position: absolute;
  margin: auto;
  width: 400px;
  height: 20px;
  background-color: #ffffff10;
  border-radius: 8px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transform: translateY(100px);
  transition: background-color 0.6s ease;
  padding: 0 10px;
}

.duration:hover {
  background-color: #ffffff30;
}

.duration-bar {
  height: 2px;
  width: 80%;
  background-color: #ffffff30;
  position: relative;
  overflow: hidden;
}

.duration-bar:before {
  position: absolute;
  top: 0;
  left: 0;
  content: '';
  transform: translateX(var(--x, -100%));
  height: 2px;
  width: 100%;
  background-color: #ffffff50;
}
.duration-text {
  color: #ffffff80;
  font-size: 12px;
  margin-right: 10px;
}

.ring.rotating {
  animation: rotate 15s linear infinite forwards;
}

.ring.paused {
  animation-play-state: paused;
}

.ring::before {
  content: '';
  position: absolute;
  top: -2px;
  left: -2px;
  height: inherit;
  width: inherit;
  border: 2px solid #ffffff80;
  border-radius: 50%;
  z-index: -1;
  filter: drop-shadow(0 0 10px #fff);
}

.player {
  width: 0;
  height: 0;
}

@keyframes rotate {
  0% {
    transform: translateY(-30%) rotate(0deg);
  }

  100% {
    transform: translateY(-30%) rotate(360deg);
  }
}

